[gd_scene load_steps=4 format=3 uid="uid://cuy0nrm8fn7yh"]

[ext_resource type="PackedScene" uid="uid://j3ar4nbltgjb" path="res://scenes/BackGroundScene/background.tscn" id="1_hhaq2"]
[ext_resource type="Script" uid="uid://dgpv8ktgd7p5c" path="res://scenes/scripts/main_menu_options.gd" id="1_iafdm"]
[ext_resource type="Theme" uid="uid://ciaxuhxqbvvvv" path="res://res/menu_theme.tres" id="2_1sv24"]

[node name="Node2D" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1151.0
offset_bottom = 649.0
metadata/_edit_lock_ = true

[node name="MainMenuButtons" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -136.0
offset_right = 300.0
grow_vertical = 0
script = ExtResource("1_iafdm")

[node name="StartBtn" type="Button" parent="Control/MainMenuButtons"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_vertical = 2
theme = ExtResource("2_1sv24")
text = "Singleplayer"
alignment = 0

[node name="MultiplayerBtn" type="Button" parent="Control/MainMenuButtons"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 2
theme = ExtResource("2_1sv24")
text = "Multiplayer"
alignment = 0

[node name="OptionsBtn" type="Button" parent="Control/MainMenuButtons"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 2
theme = ExtResource("2_1sv24")
text = "Options"
alignment = 0

[node name="ExitBtn" type="Button" parent="Control/MainMenuButtons"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 2
theme = ExtResource("2_1sv24")
text = "Exit to desktop"
alignment = 0

[node name="Background" parent="." instance=ExtResource("1_hhaq2")]
